<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/username_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/text_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quiz_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/answer_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/question_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/text_quiz"
        app:layout_constraintBottom_toTopOf="@id/answer_group"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <RadioGroup
        android:id="@+id/answer_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16dp">

        <RadioButton
            android:id="@+id/answer_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_true" />

        <RadioButton
            android:id="@+id/answer_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer_false" />
    </RadioGroup>

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/previous_button"
        app:layout_constraintTop_toBottomOf="@id/answer_group"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        app:layout_constraintTop_toBottomOf="@id/answer_group"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_button"
        app:layout_constraintTop_toBottomOf="@id/answer_group"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/answer_group"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
